# medo

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  util.rs
crates/core/src/entry/: image.rs  mod.rs  path.rs
crates/medo/: Cargo.toml
crates/medo/src/: group.rs  lib.rs
crates/medo/src/pipeline/: alignment.rs  mod.rs  sharpen.rs  stacking.rs
crates/stacker/: Cargo.toml
crates/stacker/benches/: common.rs  homography.rs  stacker.rs  star_mask.rs
crates/stacker/src/: contour.rs  error.rs  homography.rs  lib.rs  star.rs
crates/stacker/src/homography/: ecc.rs  mod.rs  orb.rs
crates/stacker/src/stacker/: average.rs  mod.rs
crates/stacker/tests/: Cargo.toml  README.md  common.rs  homography.rs  star_mask.rs
crates/stacker/tests/benches/: homography.rs  stacker.rs  star_mask.rs
crates/stacker/tests/src/: common.rs  lib.rs
crates/stacker/tests/tests/: homography.rs  stacker.rs  star_mask.rs
crates/stacker/tests/tests/data/: binary_1.ppm  binary_2.ppm
crates/ui/: cli.rs  main.rs
src/: entry.rs  error.rs  group.rs  main.rs  medo.rs  pipeline.rs  util.rs
src/entry/: image.rs  mod.rs  path.rs
src/pipeline/: alignment.rs  mod.rs  stacking.rs
