[workspace]
members = [
    "crates/stacker",
    "crates/stacker/tests"
]

[package]
name = "medo"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
log = "0.4"
medo_stacker = { path = "crates/stacker" }
opencv = "0.66"
rayon = "1"

env_logger = "0.9"
