[workspace]
members = [
    "crates/stacker",
    "crates/stacker/tests"
]

[package]
name = "medo"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
lazy_static = "1"
libc = "0.2"
medo_stacker = { path = "crates/stacker" }
opencv = "0.66"
rayon = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
