[workspace]
members = [
    "crates/core",
    "crates/medo",
    "crates/stacker",
    "crates/stacker/tests",
]

[package]
name = "medo_ui"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.61"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
medo = { path = "crates/medo" }
rayon = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
path = "src/main.rs"
name = "medo"

[profile.release]
lto = true
strip = true
codegen-units = 1
